# chatbot-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  jwt_handler.py
backend/app/models/: __init__.py  chat_history.py  faq.py
backend/app/routers/: auth.py  chat_history.py  dashboard.py  faq.py  web_chat.py  webhook.py
backend/app/schemas/: chat_history.py  dashboard.py  faq.py  web_chat.py
backend/app/seed/: seed_data.py
backend/app/services/: chat_history_service.py  chat_service.py  chroma_service.py  line_handler.py  line_message_builder.py  rag_service.py
backend/tests/: conftest.py  test_chat_service.py  test_rag_service.py  test_smoke.py  test_web_chat.py
demo-site/: chat.html  index.html
demo-site/css/: style.css
demo-site/js/: api.js  chat.js
docs/superpowers/plans/: 2026-04-03-web-chat-demo.md
docs/superpowers/specs/: 2026-04-03-web-chat-demo-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: style.css
frontend/src/components/chat/: ChatThread.vue  UserList.vue
frontend/src/components/dashboard/: RecentChats.vue  StatsCard.vue
frontend/src/components/faq/: FAQForm.vue  FAQList.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  chatHistory.js  dashboard.js  faq.js
frontend/src/views/: AppLayout.vue  ChatHistoryView.vue  DashboardView.vue  FAQView.vue  LoginView.vue
(+1 files in other folders)
